tests/error/modifier_errors/captured_var_inout_own.err
Error: Not owned (at $FILE:16:16)
   | 
14 |     a = qubit()
15 |     with dagger:
16 |         discard(a)
   |                 ^ Function `discard` wants to take ownership of this argument,
   |                   but `__modified__()` doesn't own `a`

Help:
   | 
13 | def test() -> None:
14 |     a = qubit()
   |     - Argument `a` is only borrowed. Consider taking ownership:
   |       `a: qubit @owned`

Guppy compilation failed due to 1 previous error
